--- a/Machine Learning 2.ipynb
+++ b/Machine Learning 2.ipynb
@@ -5,8 +5,11 @@
    "id": "22cde11c",
    "metadata": {},
    "source": [
-    "Machine Learning Foundations – Shallow Models Training, Validation and Tuning\n",
+    "#Machine Learning Foundations – Shallow Models Training, Validation and Tuning\n",
     "\n",
+    "---\n",
+    "## Github\n",
+    "### https://github.com/L96Expanded/Individual-Assignment-II/blob/main/Machine%20Learning%202.ipynb\n",
     "---\n",
     "\n",
     "This notebook implements:\n",
